# t41mr_public

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  create_build_eee.sh  create_build_eee_arm13.sh  create_build_sdt.sh  create_git_version.sh  notes.txt  reformat.sh  update_t41eeew.sh
.github/workflows/: t41eee-actions.yml  t41sdt-actions.yml
T41EEEw/: .gitignore
T41EEEw/T41EEE/: Calibrate.cpp  Display.cpp  FFT.cpp  Menu.cpp  MenuProc.cpp  SDT.h  T41EEE.ino  Utility.cpp
cmake/: arm13.toolchain.cmake  teensy.cmake  teensy41.toolchain.cmake
script/: load_to_teensy.sh
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/: 13.2.Rel1-x86_64-arm-none-eabi-manifest.txt
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/arm/v5te/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/arm/v5te/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/nofp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v6-m/nofp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7+fp/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7+fp/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7-a+fp/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7-a+fp/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7-a+simd/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7-a+simd/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7-a/nofp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7-m/nofp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7-r+fp.sp/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7-r+fp.sp/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7/nofp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+dp/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+dp/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m/nofp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7ve+simd/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v7ve+simd/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v8-a+simd/hard/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/thumb/v8-a+simd/softfp/: libstdc++.a-gdb.py
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/lib/gcc/arm-none-eabi/13.2.1/plugin/: gtype.state
teensy/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/libexec/gcc/arm-none-eabi/13.2.1/: lto-wrapper
teensy/hardware/avr/1.58.1/: installed.json
teensy/hardware/avr/1.58.1/libraries/: ADC.txt  AccelStepper.txt  Adafruit_nRF8001.txt  Audio.txt  Entropy.txt  FastCRC.txt  FastLED.txt  FreqCount.txt  FreqMeasureMulti.txt  IRremote.txt  LedControl.txt  LedDisplay.txt  LowPower.txt  MIDI.txt  OSC.txt  PulsePosition.txt  SPIFlash.txt  SerialFlash.txt  ShiftPWM.txt  SoftPWM.txt  TFT_ILI9163C.txt  TimerOne.txt  TinyGPS.txt  Tlc5940.txt  UTFT.txt  VirtualWire.txt  XBee.txt  XPT2046_Touchscreen.txt  i2c_t3.txt  x10.txt
teensy/hardware/avr/1.58.1/libraries/EasyTransfer/: library.properties
teensy/hardware/avr/1.59.0/: boards.txt  installed.json  platform.txt
teensy/hardware/avr/1.59.0/cores/teensy4/: imxrt.h  math_helper.h
teensy/hardware/avr/1.59.0/libraries/: Adafruit_NeoPixel.txt  Adafruit_STMPE610.txt  Adafruit_VS1053.txt  AltSoftSerial.txt  Artnet.txt  CapacitiveSensor.txt  DS1307RTC.txt  DmxSimple.txt  DogLcd.txt  Encoder.txt  FlexCAN.txt  FlexiTimer2.txt  FreqMeasure.txt  FrequencyTimer2.txt  ILI9341_t3.txt  Keypad.txt  LiquidCrystalFast.txt  Metro.txt  MsTimer2.txt  OctoWS2811.txt  OneWire.txt  PS2Keyboard.txt  PWMServo.txt  Ping.txt  RadioHead.txt  Snooze.txt  Time.txt  TimeAlarms.txt  TimerThree.txt  ks0108.txt
teensy/hardware/avr/1.59.0/libraries/Adafruit_VS1053/: Adafruit_VS1053.cpp  Adafruit_VS1053.h
teensy/hardware/avr/1.59.0/libraries/Audio/: async_input_spdif3.cpp
teensy/hardware/avr/1.59.0/libraries/EasyTransferI2C/: library.properties
teensy/hardware/avr/1.59.0/libraries/ILI9488_t3/: README.md
teensy/hardware/avr/1.59.0/libraries/LiquidCrystal/: library.properties
teensy/hardware/avr/1.59.0/libraries/OSC/: SLIPEncodedUSBSerial.cpp
teensy/hardware/avr/1.59.0/libraries/TinyGPS/: TinyGPS.cpp  TinyGPS.h
teensy/tools/teensy-discovery/1.58.0/: teensy-discovery
teensy/tools/teensy-monitor/1.58.0/: teensy-monitor
teensy/tools/teensy-tools/1.58.0/: precompile_helper  teensy_ports  teensy_post_compile  teensy_reboot  teensy_secure  teensy_serialmon  teensy_size
teensy/tools/teensy-tools/1.59.0/: pre_uninstall.sh  precompile_helper  teensy_cleanup  teensy_ports  teensy_post_compile  teensy_reboot  teensy_secure  teensy_serialmon  teensy_size
teensy_loader_cli/: readme.txt  rules.sh  teensy_loader_cli
version/: .gitignore
(+300 files in other folders)
